@@ -586,7 +586,6 @@ splash.openViews=Opening Views
 splash.plugin=Loading Plugin : 
 configureWizard.nat.tooManyPorts=Too many ports to test (9 max)
 ConfigView.section.color=Color Scheme
-PeerSocket.unknown=Unknown
 MyTorrentsView.menu.publish=Pub&lish...
 MyTrackerView.status.published=Published
 MyTrackerView.completed=Completed
@@ -2517,4 +2516,11 @@ dialog.uiswitcher.restart.title=UI Switcher: Azureus Restart Required
 dialog.uiswitcher.restart.text=Azureus needs to restart in order to switch to the new UI mode.
 
 TrayWindow.menu.close=Close Download Basket
+
+# Used for peers which we can't determine.
+PeerSocket.unknown=Unknown
+PeerSocket.fake_client=FAKE
+PeerSocket.bad_peer_id=bad peer ID
+PeerSocket.mismatch_id=mismatch
+
 #PLEASE LEAVE ME AT VERY BOTTOM!
